refactor(flexlb): enforce exact scheduling ownership
Split admission, delivery, eviction, projection, and endpoint runtime capabilities around exact generations and one-shot ownership. Tighten cache/status publication, cancellation, retirement, batch dispatch, and routing hot paths. Migrate functional and performance coverage plus configuration and architecture documentation.